RepInput component and animation

--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,12 @@ input[type="number"]::-webkit-outer-spin-button {
 input[type="number"] {
   -moz-appearance: textfield;
 }
+
+@keyframes reset_spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(-720deg); /* 2 full rotations */
+  }
+}
